--- a/academy-server/package.json
+++ b/academy-server/package.json
@@ -22,8 +22,11 @@
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@sentry/bun": "^9.26.0",
+    "@sentry/cli": "^2.46.0",
     "drizzle-orm": "^0.44.0",
     "elysia": "^1.3.3",
+    "pg": "^8.16.0",
     "postgres": "^3.4.7"
   }
 }
