--- a/academy-node/package.json
+++ b/academy-node/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "tsx watch index.ts",
-    "start": "node --loader tsx/esm index.ts",
-    "build": "tsc",
+    "build": "tsup && npx @sentry/wizard@latest -i sourcemaps --saas",
+    "start": "node dist/index.js",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx db/migrate.ts",
     "db:push": "drizzle-kit push",
@@ -19,6 +19,7 @@
     "@types/express": "^5.0.2",
     "@types/node": "^20.0.0",
     "drizzle-kit": "^0.31.1",
+    "tsup": "^8.5.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   },
