--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sentry/react": "^9.26.0",
     "@sentry/vite-plugin": "^3.5.0",
     "@tailwindcss/vite": "^4.1.8",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
