--- a/package.json
+++ b/package.json
@@ -1,42 +1,19 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "@sentry-academy/workspace",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
-    "dev": "run-p dev:frontend dev:backend",
-    "dev:frontend": "vite",
-    "dev:backend": "cd academy-node && npm run dev",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@sentry/react": "^9.26.0",
-    "@sentry/vite-plugin": "^3.5.0",
-    "@tailwindcss/vite": "^4.1.8",
-    "dotenv": "^16.5.0",
-    "lucide-react": "^0.513.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.6.2",
-    "rehype-highlight": "^7.0.2"
+    "dev": "pnpm --parallel run dev",
+    "dev:frontend": "pnpm --filter @sentry-academy/frontend run dev",
+    "dev:server": "pnpm --filter @sentry-academy/server run dev",
+    "build": "pnpm --recursive run build",
+    "build:frontend": "pnpm --filter @sentry-academy/frontend run build",
+    "build:server": "pnpm --filter @sentry-academy/server run build",
+    "lint": "pnpm --recursive run lint"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/node": "^22.15.29",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "npm-run-all": "^4.1.5",
-    "tailwindcss": "^4.1.8",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "pnpm": "^9.0.0"
   }
 }
