--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@sentry/react": "^9.26.0",
     "@sentry/vite-plugin": "^3.5.0",
     "@tailwindcss/vite": "^4.1.8",
