--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
+    "@sentry/react": "^9.27.0",
     "@tailwindcss/vite": "^4.1.8",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.513.0",
