--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,7 @@
     "db:create-readonly-user": "tsx scripts/create-readonly-user.ts"
   },
   "devDependencies": {
+    "@sentry/esbuild-plugin": "^3.5.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^20.0.0",
