--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "pnpm --recursive run build",
     "build:frontend": "pnpm --filter @sentry-academy/frontend run build",
     "build:server": "pnpm --filter @sentry-academy/server run build",
-    "lint": "pnpm --recursive run lint"
+    "lint": "pnpm --recursive run lint",
+    "start": "pnpm --parallel run start"
   },
   "devDependencies": {
     "pnpm": "^9.0.0"
