--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,8 +2,9 @@
   "name": "@sentry-academy/server",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "tsx watch index.ts",
+    "dev": "tsx watch --import ./instrument.ts index.ts",
     "build": "node build.js",
     "start": "node dist/index.js",
     "db:generate": "drizzle-kit generate",
@@ -20,7 +21,6 @@
     "@types/express": "^5.0.2",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.15.4",
-    "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "esbuild": "^0.25.5",
     "tsx": "^4.0.0",
@@ -28,7 +28,10 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "@sentry/esbuild-plugin": "^3.5.0",
+    "@sentry/node": "^9.28.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "drizzle-orm": "^0.44.2",
     "express": "^5.1.0",
     "pg": "^8.16.0",
