--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "db:import": "pnpm --filter @sentry-academy/server run db:import"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^3.2.3",
     "pnpm": "^9.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vitest": "^3.2.3"
   }
 }
