--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "supertest": "^7.1.1",
     "tailwindcss": "^3.4.17",
     "vitest": "^3.2.3"
+  },
+  "dependencies": {
+    "@sentry/vite-plugin": "^3.5.0"
   }
 }
